# RayMan

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: standalone.yml  tidy.yml  ubuntu.yml
documentation/: CMakeLists.txt
include/: BoundingBox.hpp  Camera.hpp  Color.hpp  Hit.hpp  Image.hpp  MathUtils.hpp  Point3.hpp  RandomUtils.hpp  Ray.hpp  Scene.hpp  UnitVector3.hpp  Vector3.hpp
include/Hittable/: BVHNode.hpp  Hittable.hpp  Sphere.hpp
include/Material/: Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
source/: BoundingBox.cpp  Camera.cpp  Color.cpp  Hit.cpp  Image.cpp  Point3.cpp  RandomUtils.cpp  Ray.cpp  Scene.cpp  UnitVector3.cpp  Vector3.cpp
source/Hittable/: BVHNode.cpp  Hittable.cpp  Sphere.cpp
source/Material/: Dielectric.cpp  Lambertian.cpp  Material.cpp  Metal.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/include/: TestUtils.hpp
test/source/: SphereTest.cpp  TestUtils.cpp  UnitVector3Test.cpp  Vector3.cpp  Vector3Test.cpp
